Fixed footer positioning on wesite files. Image size is now controlled through ProjectFiles/genVisuals.py. Fixed x-axis layout to be readable.

--- a/htmlScripts/styles.css
+++ b/htmlScripts/styles.css
@@ -11,7 +11,6 @@ h3 {
     color: green;
 }
 footer {
-    position: absolute;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
